# python-project-49

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
brain_games/: cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  cli.py  engine.py  even.py  gcd.py  main.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py  main.py
brain_games/scripts/games/: brain_even.py  brain_gcd.py  brain_prime.py
